--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "The Open Source Club at The Ohio State University"
+title                    : "Whack"
 title_separator          : "-"
-name                     : &name "Open Source Club"
-description              : "Tutorials, talks, and news for all your FOSS needs."
+name                     : &name "Whack"
+description              : "The Computer Science society at Wichita State University."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 logo                     : "osc-logo.svg"
-repository               : https://github.com/OSUOSC # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : https://github.com/whackcs # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "assets/images/500x300.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -30,7 +30,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter "osuosc"
+  username               : &twitter "WhackCS"
 facebook:
   username               :
   app_id                 :
@@ -38,8 +38,8 @@ facebook:
 og_image                 : "/assets/osuosc/logo.png" # Open Graph/Twitter default site image
 social:
   type                   : Organization # Person or Organization (defaults to Person)
-  name                   : OSUOSC # If the user or organization name differs from the site's name
-  links                  : ["https://riot.im/app/#/room/#osuosc:matrix.org", "https://www.osu.edu/map/building.php?building=026"]# An array of links to social media profiles
+  name                   : WhackCS # If the user or organization name differs from the site's name
+  links                  : # An array of links to social media profiles
 
 # Site Author
 author:
@@ -47,7 +47,7 @@ author:
   avatar           : "/assets/osuosc/logo.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Meetings every Thursday in Caldwell 120 during the Fall and Spring Semesters"
   location         :
-  email            : "info@opensource.osu.edu"
+  email            : "nill"
   uri              :
   bitbucket        :
   codepen          :
@@ -55,7 +55,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "osuosc"
+  github           : "whackcs"
   gitlab           :
   google_plus      :
   keybase          :
